--- a/site/about/about.html
+++ b/site/about/about.html
@@ -20,7 +20,21 @@
                 <li class="lands"><a href="../loginSignup/loginSignup.html">Login / SignUp</a></li>
                 <li class="about"><a href="./about.html">About</a></li>
             </ul>
-                <i class="fa fa-bars fa-2x burger"></i>
+                <i class="fa fa-bars fa-2x burger" id="burger">
+                    <div class="rnav" id="rnav">
+                        <a href="../index.html">
+                            <p>Home</p>
+                        </a>
+                        <a href="../contact/contact.html">
+                            <p>Contact</p>
+                        </a>
+                        <a href="../loginSignup/loginSignup.html">
+                            <p>Login / SignUp</p>
+                        </a>
+                        <a href="./about.html">
+                            <p>About</p>
+                        </a></div>
+                </i>
             </nav>
         </header>
 
@@ -57,12 +71,12 @@
                 <div class="img">ddfafsddddddddddddddddddddddddddddddddddddddd</div>
                 <div class="info">
                     <h2>Developer</h2>
-                    <p>Hey, my name is <span>Vishesh</span>. Software development is my passion. I have worked on android development, have learned Java to build some software for pc, now working on web development and want to become a full-stack developer.</p>
+                    <p>Hey, my name is <span>Vishesh</span>. Software development is my passion. I have worked on android development, have learned Java to build some software for pc, now working on web development and want to become a full-stack developer. For email :- <span id="email">Vishesh.tapan11@gmail.com</span></p>
                 </div>
             </div>
         </section>
-
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
 
