--- a/site/ngoAccount/ngoAccount.html
+++ b/site/ngoAccount/ngoAccount.html
@@ -9,12 +9,13 @@
     <title>NGO account</title>
   </head>
   <body>
+    <a id="tosearch" href="../search/search.html" style="display: none;"></a>
     <div class="cont">
       <!-- header -->
       <header>
-        <div class="searchbar">
-          <button id="user">User</button>
-          <button id="ngo">NGO</button>
+        <div class="searchbar" id="searchbar">
+          <button id="user">Users</button>
+          <button id="ngo">NGOs</button>
           <input type="text" placeholder="Search" id="text" />
           <button id="search">Search</button>
         </div>
