--- a/site/contact/contact.html
+++ b/site/contact/contact.html
@@ -20,7 +20,21 @@
                 <li class="lands"><a href="../loginSignup/loginSignup.html">Login / SignUp</a></li>
                 <li class="about"><a href="../about/about.html">About</a></li>
             </ul>
-                <i class="fa fa-bars fa-2x burger"></i>
+                <i class="fa fa-bars fa-2x burger" id="burger">
+                    <div class="rnav" id="rnav">
+                        <a href="../index.html">
+                            <p>Home</p>
+                        </a>
+                        <a href="./contact.html">
+                            <p>Contact</p>
+                        </a>
+                        <a href="../loginSignup/loginSignup.html">
+                            <p>Login / SignUp</p>
+                        </a>
+                        <a href="../about/about.html">
+                            <p>About</p>
+                        </a></div>
+                </i>
             </nav>
         </header>
 
