--- a/site/index.html
+++ b/site/index.html
@@ -20,7 +20,13 @@
                 <li class="lands"><a href="./loginSignup/loginSignup.html">Login / SignUp</a></li>
                 <li class="about"><a href="./about/about.html">About</a></li>
             </ul>
-                <i class="fa fa-bars fa-2x burger"></i>
+                <i class="fa fa-bars fa-2x burger" id="burger">
+                    <div class="rnav" id="rnav">
+                        <a href="./index.html"><p>Home</p></a>
+                        <a href="./contact/contact.html"><p>Contact</p></a>
+                        <a href="./loginSignup/loginSignup.html"><p>Login / SignUp</p></a>
+                        <a href="./about/about.html"><p>About</p></a></div>
+                </i>
             </nav>
         </header>
 
@@ -100,5 +106,7 @@
             <a href="./about/about.html">About</a></div>
         </footer>
     </div>
+
+    <script src="./script.js"></script>
 </body>
 </html>
