Verifiction UI fixed

--- a/site/ngoAccount/ngoAccount.html
+++ b/site/ngoAccount/ngoAccount.html
@@ -9,6 +9,15 @@
     <title>NGO account</title>
   </head>
   <body>
+    <div id="modal" class="modal">
+      <div>
+        <p>Please Varify your Email.</p>
+        <p>Enter the OTP sent to your Email address.</p>
+        <input id="modalInput" type="text">
+        <button id="modalBtn">Verify</button>
+      </div>
+    </div>
+
     <a id="tosearch" href="../search/search.html" style="display: none;"></a>
     <div class="cont">
       <!-- header -->
