--- a/site/userAccount/userAccount.html
+++ b/site/userAccount/userAccount.html
@@ -14,6 +14,16 @@
     <title>User Account</title>
 </head>
 <body>
+    
+    <div id="modal" class="modal">
+        <div>
+            <p>Please Varify your Email.</p>
+            <p>Enter the OTP sent to your Email address.</p>
+            <input id="modalInput" type="text">
+            <button id="modalBtn">Verify</button>
+        </div>
+    </div>
+
     <a id="tosearch" href="../search/search.html" style="display: none;"></a>
     <div class="cont">
          
