Verifiction UI fixed 2nd

--- a/site/userAccount/userAccount.html
+++ b/site/userAccount/userAccount.html
@@ -19,7 +19,7 @@
         <div>
             <p>Please Varify your Email.</p>
             <p>Enter the OTP sent to your Email address.</p>
-            <input id="modalInput" type="text">
+            <input id="modalInput" type="text" placeholder="Enter OTP here">
             <button id="modalBtn">Verify</button>
         </div>
     </div>
